--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="width: 100%; height: 100%; margin: 0; padding: 0;background-color: #292E38;">
   <app-root></app-root>
 </body>
 </html>
